welcome.lessons.welcome.bat.bool2.LastDigit2.scala.error
lastDigit:2: error: not found: value %
  if(%a==%b || %b==%c || %a==%c) {
     ^lastDigit:2: error: not found: value ==%
  if(%a==%b || %b==%c || %a==%c) {
       ^lastDigit:2: error: not found: value ||
  if(%a==%b || %b==%c || %a==%c) {
            ^lastDigit:2: error: not found: value %
  if(%a==%b || %b==%c || %a==%c) {
                         ^lastDigit:2: error: not found: value ==%
  if(%a==%b || %b==%c || %a==%c) {
                           ^