welcome.lessons.welcome.bat.bool2.LastDigit2.scala.code
def lastDigit(a:Int, b:Int, c:Int):Boolean = {
  if(%a==%b || %b==%c || %a==%c) {
    return true
  }
  else {
    return false
  }
}